2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs:
	  Show an error message when displaying an unknown project.

2009-10-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CodeTemplates/MonoDevelop-templates.xml:
	  Name the caught exception in try template.

2009-10-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CodeTemplates/MonoDevelop-templates.xml: Fix
	  duplicate try shortcut.

2009-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.Ide.DocumentSwitcher.cs:
	* gtk-gui/MonoDevelop.Ide.SelectEncodingsDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.GoToDialog.cs:
	* gtk-gui/MonoDevelop.Ide.OverridesImplementsDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewLayoutDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs:
	* gtk-gui/MonoDevelop.Ide.FindInFiles.FindInFilesDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs:
	* gtk-gui/MonoDevelop.Ide.FindInFiles.SearchResultWidget.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.ExportProjectDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.AddinLoadErrorDialog.cs:
	* gtk-gui/MonoDevelop.Ide.CodeTemplates.EditTemplateDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.FeatureSelectorDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.IncludeNewFilesDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.KeyBindingsPanel.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.SelectReferenceDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.TasksPanelWidget.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.BuildPanelWidget.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.SelectFileFormatDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.EncapsulateFieldDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.AddInsPanelWidget.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Components.ExecutionModeComboBox.cs: